# Database

./: .clang-format  .gitignore  README.md
lab1/: Makefile  main
lab1/include/: BufferManager.h  Constants.h  LRUCache.h  Page.h  Row.h  Utilities.h
lab1/src/: BufferManager.cpp  LRUCache.cpp  Page.cpp  Utilities.cpp  main.cpp
lab1/test/: test_buffer_manager.cpp  test_page.cpp
lab1/test_end2end/: test_end2end.cpp
lab1/test_unit/: test_buffer_manager.cpp
lab2/: CMakeLists.txt  README.md  main.cpp  plot_results.py  title.basics.2000.tsv
lab2/include/: BTree.h  BufferManager.h  Constants.h  DatabaseCatalog.h  Row.h  TreeNode.h  Utilities.h
lab2/src/: BufferManager.cpp  Utilities.cpp
lab2/test/: test_all.cpp  test_end2end.cpp  test_end2end_small_dataset.cpp  test_unit.cpp
lab2/test/unit/: test_BTree.cpp  test_buffer_manager.cpp  test_data_catalog.cpp  test_lru_cache.cpp
lab3/: CMakeLists.txt  README.md  clean_imdb.py  plot_results.py
lab3/include/: BNLJoinOp.h  BTree.h  BufferManager.h  Commands.h  Constants.h  FixedSizeString.h  LRUCache.h  Operator.h  Page.h  ProjectOp.h  ProjectOperator.h  Row.h  ScanOp.h  ScanOperator.h  SelectOp.h  SelectOperator.h  TreeNode.h  WorkedOnMaterialOp.h
lab3/src/: BufferManager.cpp  Commands.cpp  DatabaseCatalog.cpp  Page.cpp  StartEngine.cpp
lab3/test/: create_and_load.sql  performance_test.cpp  postgres_command.sh  run_and_compare.sh  test_end2end.cpp  test_lab2_end2end_small_dataset.cpp
lab3/test/unit/: MockScanOp.h  test_BNLJoinOp.cpp  test_BTree.cpp  test_ProjectOp.cpp  test_ScanOp.cpp  test_SelectOp.cpp  test_buffer_manager.cpp  test_data_catalog.cpp  test_page.cpp  test_tree_node.cpp
